# facebook-thrift-hbase-test

./: .gitignore  CMakeLists.txt  README.md
facebook-folly-install/include/folly/: folly-config.h
hbase/: CMakeLists.txt  HBaseClient.cpp  HBaseClient.h
hbase/test/: CMakeLists.txt  HBaseClientTest.cpp
